[package]
name = "bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
mpl-token-metadata = { version = "4.1.2", features = ["serde"] }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
